<resources>
    <string name="app_name">Gank</string>
    <string name="welcome">Gank 干货营</string>
    <string name="pic_fragment_title">图片详情</string>
    <string name="html_fragment_title">详情</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <!-- nav header-->
    <string name="nav_header_title">Gank</string>
    <string name="nav_today">首页</string>
    <string name="nav_welfare">福利</string>
    <string name="nav_android">Android</string>
    <string name="nav_ios">iOS</string>
    <string name="nav_front_end">前端</string>
    <string name="nav_extra">Extra</string>
    <string name="nav_casual">Casual</string>
    <string name="nav_video">Video</string>
    <string name="nav_app">App</string>
    <string name="nav_all">All</string>
    <string name="nav_about">关于</string>
    <string name="nav_clear_cache">清空缓存</string>
    <string name="ok">OK</string>
    <string name="permission_storage_rationale">保存图片需要允许读写存储权限</string>
    <string name="permision_available_storage">已允许读写内存权限</string>
    <string name="permissions_not_granted">读写内存权限被禁止</string>
</resources>
