<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_today"
            android:title="@string/nav_today"
            android:checked="true"/>
        <item
            android:id="@+id/nav_android"
            android:icon="@drawable/ic_menu_android"
            android:title="@string/nav_android"/>
        <item
            android:id="@+id/nav_ios"
            android:icon="@drawable/ic_menu_ios"
            android:title="@string/nav_ios"/>
        <item
            android:id="@+id/nav_front_end"
            android:icon="@drawable/ic_menu_front_end"
            android:title="@string/nav_front_end"/>
        <item
            android:id="@+id/nav_welfare"
            android:icon="@drawable/ic_menu_welfare"
            android:title="@string/nav_welfare"/>
        <item
            android:id="@+id/nav_like"
            android:icon="@drawable/ic_favorite_black_18dp"
            android:title="收藏"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/nav_about"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/nav_feedback"/>
        </menu>
    </item>

</menu>
